<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:text="@string/apercu_heures"
        android:id="@+id/textHeures"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:textColor="#000000"
        android:layout_weight="2"/>

    <TextView
        android:id="@+id/textPilote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/apercu_pilote"
        android:padding="10dp"
        android:layout_weight="1"
        android:textColor="#000000"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/apercu_passagers"
        android:id="@+id/textPassagers"
        android:padding="10dp"
        android:layout_weight="1"
        android:textColor="#000000"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/apercu_vent"
        android:id="@+id/textVent"
        android:padding="10dp"
        android:layout_weight="1"
        android:textColor="#000000"
        android:gravity="center_horizontal"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/apercu_commentaires"
            android:id="@+id/textCommentaires"
            android:padding="10dp"
            android:layout_weight="2"
            android:textColor="#000000"
            android:gravity="center_horizontal"/>

</LinearLayout>