<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aerophile.app.EnvoieActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="6"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <!-- Prevent Auto-Focus -->
        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/envoie_voir_pdf"
            android:id="@+id/buttonPdf"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/envoie_email_objet"
            android:id="@+id/textObjetEmail"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginRight="20dp"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:id="@+id/inputObjetEmail"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginTop="20dp"
            android:inputType="textEmailSubject"
            android:singleLine="true"
            android:layout_columnSpan="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/envoie_envoyer_a"
            android:id="@+id/textListe"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/envoie_premiere_liste"
            android:id="@+id/checkPremiereListe"
            android:layout_row="2"
            android:layout_column="1"
            android:checked="true"
            android:layout_marginTop="10dp"
            android:layout_columnSpan="2" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/envoie_seconde_liste"
            android:id="@+id/checkSecondeListe"
            android:layout_row="3"
            android:layout_column="1"
            android:checked="false"
            android:layout_columnSpan="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/envoie_quitter"
            android:id="@+id/buttonQuitter"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_gravity="right"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/envoie_envoyer_rapport"
            android:id="@+id/buttonEnvoie"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_gravity="left"
            android:layout_marginTop="20dp"/>

        <TextView
            android:text="@string/envoie_mail_date_envoie_ko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:id="@+id/textDateEnvoie"
            android:layout_marginLeft="10dp"
            android:gravity="center_horizontal"
            android:layout_columnSpan="2" />

    </GridLayout>
</RelativeLayout>
