<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aerophile.app.ApercuActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@drawable/background_header_apercu">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/apercu_heures"
            android:id="@+id/labelHeures"
            android:padding="20dp"
            android:textColor="#000000"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/apercu_pilote"
            android:id="@+id/labelPilote"
            android:padding="20dp"
            android:textColor="#000000"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/apercu_passagers"
            android:id="@+id/labelPassagers"
            android:textColor="#000000"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/apercu_vent"
            android:id="@+id/labelVent"
            android:padding="20dp"
            android:textColor="#000000"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/apercu_commentaires"
            android:id="@+id/labelCommentaires"
            android:padding="20dp"
            android:textColor="#000000"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:textStyle="bold"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="49dp">

        <ListView
            android:id="@+id/listView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@drawable/background_footer_apercu"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/apercu_footer_vols"
            android:id="@+id/labelTotalVols"
            android:padding="15dp"
            android:textColor="#000000"
            android:layout_weight="1"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/apercu_footer_heures"
            android:id="@+id/labelTotalHeures"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="#000000"
            android:layout_weight="1"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/apercu_footer_passagers"
            android:id="@+id/labelTotalPassagers"
            android:textColor="#000000"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"/>

    </LinearLayout>

</RelativeLayout>
