<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
android:layout_height="fill_parent"
tools:context="com.aerophile.app.VolListActivity"
    android:gravity="center">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:rowCount="15"
                android:columnCount="3"
                        android:layout_marginBottom="30dp"
                        android:layout_marginTop="10dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vol_decollage"
                    android:id="@+id/buttonDecollage"
                    android:layout_row="0"
                    android:background="@drawable/selector_button_decollage"
                    android:layout_column="0"
                    android:enabled="false"
                    android:allowUndo="false" android:paddingRight="50dp"
                    android:paddingLeft="50dp" android:paddingBottom="0dp"
                    android:paddingTop="0dp"
                    android:layout_gravity="right"
                    android:layout_marginLeft="20dp" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/vol_heure_holder"
                    android:id="@+id/textHeureDecollage"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_marginLeft="20dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vol_modifier_heure"
                    android:id="@+id/buttonHeureDecollage"
                    android:layout_row="0"
                    android:layout_column="2" />

                <TextView
                    android:text="@string/vol_pilote"
                    android:layout_column="0"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textPilote"
                    android:layout_row="1"
                    android:layout_width="match_parent"
                    android:layout_columnSpan="3"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp" />

                <AutoCompleteTextView
                    android:id="@+id/inputPilote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_row="2"
                    android:layout_columnSpan="3"
                    android:layout_column="0"
                    android:inputType="textCapCharacters">
                </AutoCompleteTextView>

                <TextView
                    android:text="@string/vol_nombre_passagers"
                    android:layout_column="0"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textPassagers"
                    android:layout_row="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="3"
                    android:layout_marginLeft="20dp" />

                <EditText
                    android:layout_row="4"
                    android:id="@+id/inputPassagers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="3"
                    android:maxLength="2"
                    android:inputType="number"
                    android:layout_column="0" />

                <TextView
                    android:text="@string/vol_vitesse_vent"
                    android:layout_marginRight="20dp"
                    android:layout_column="0"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textVent"
                    android:layout_row="5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="3"
                    android:layout_marginLeft="20dp" />

                <EditText
                    android:layout_row="6"
                    android:id="@+id/inputVent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="3"
                    android:inputType="numberDecimal"
                    android:layout_column="0"
                    android:text="0" />

                <TextView
                    android:text="@string/vol_commentaires"
                    android:layout_column="0"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textCommentaires"
                    android:layout_row="7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="3"
                    android:layout_marginLeft="20dp" />

                <Spinner
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerCommentaires"
                    android:layout_row="8"
                    android:layout_column="0"
                    android:spinnerMode="dropdown"
                    android:text="@string/vol_choix_commentaires_holder"
                    android:layout_columnSpan="3"
                    android:entries="@array/vol_choix_commentaires"
                    android:prompt="@string/vol_choix_commentaires_holder"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/inputCommentaires"
                    android:layout_row="9"
                    android:layout_column="0"
                    android:layout_columnSpan="3"
                    android:layout_marginRight="10dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vol_atterrissage"
                    android:id="@+id/buttonAtterrissage"
                    android:layout_row="10"
                    android:layout_marginRight="20dp"
                    android:layout_column="0"
                    android:layout_gravity="right"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"/>

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/vol_heure_holder"
                    android:id="@+id/textHeureAtterrissage"
                    android:layout_row="10"
                    android:layout_column="1"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vol_modifier_heure"
                    android:id="@+id/buttonHeureAtterrissage"
                    android:layout_row="10"
                    android:layout_column="2"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vol_supprimer"
                    android:id="@+id/buttonSupprimerVol"
                    android:layout_gravity="right"
                    android:layout_column="2"
                    android:layout_marginRight="10dp"
                    android:layout_row="11" />

            </GridLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
